# pyGSTi

./: .flake8  .flake8-critical  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG  CNAME  CONTRIBUTING.md  MANIFEST.in  NOTICE  README  README.md  _config.yml  index.html  install_locally.py  legacy.txt  license.txt  optional-requirements.txt  params.json  pygsti_new_fpr_requirements_04_24_2023.txt  pylint_config.file  pyproject.toml  pyproject.toml.fordepoly  pyproject.toml.no_cython  pytest.ini  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ci-scripts/: before_install.sh  before_install_macos.sh  install-wheelbuilding-deps.sh  merge.sh
.github/workflows/: autodeploy.yml  beta-master.yml  bugfix.yml  deploy.yml  develop.yml  develop_testing.yml  extras.yml  feature-branches.yml  main-mac.yml  main-minimal.yml  main-no-cython.yml  main.yml  manualdeploy.yml  notebook.yml  qiskit-interop.yml  reuseable-main.yml  testdeploy.yml  testpytest.yml
CI/: deploy  github_deploy_key.enc  install.sh  push.sh  send-email
agent-docs/: 01-representation.md  02-forward-simulation.md  03-data-and-fitting.md  04-orchestration.md  05-reporting-and-persistence.md  06-modelpacks-and-processors.md  07-tools-library.md  08-domain-plugins.md  AGENTS.md  known-debt.md
agent-docs/04-orchestration/: abstract-api.md  drivers.md  gst.md  non-gst.md
benchmarking/: gatestring-performance.ipynb
dev_notes/repotools/: pylint.md
doc/: Makefile  NOTICE.rst  QuickStart.tex  README.md  StdInputFormat.tex  UserGuide.tex  conf.py  develop_merge_log.txt  formatter.md  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  pygsti.algorithms.bulk_twirled_deriv.html  pygsti.algorithms.contract.html  pygsti.algorithms.do_exlgst.html  pygsti.algorithms.do_iterative_mc2gst_with_model_selection.html  pygsti.algorithms.do_iterative_mlgst.html  pygsti.algorithms.do_lgst.html  pygsti.algorithms.do_mc2gst.html  pygsti.algorithms.do_mlgst.html  pygsti.algorithms.find_closest_unitary_gatemx.html  pygsti.algorithms.find_sufficient_fiducial_pairs.html  pygsti.algorithms.get_max_gram_basis.html  pygsti.algorithms.gram_rank_and_evals.html  pygsti.algorithms.html  pygsti.algorithms.make_meas_mxs.html  pygsti.algorithms.make_prep_mxs.html  pygsti.algorithms.max_gram_rank_and_evals.html  pygsti.algorithms.optimize_gauge.html  pygsti.algorithms.optimize_integer_fiducials_slack.html  pygsti.algorithms.test_germ_list_finitel.html  pygsti.algorithms.twirled_deriv.html  pygsti.chi2.html  pygsti.chi2fn.html  pygsti.chi2fn_2outcome.html  pygsti.chi2fn_2outcome_wfreqs.html  pygsti.chi2fn_wfreqs.html  pygsti.construction.build_gateset.html  (+312 more)
doc/_sources/: index.txt  pygsti.algorithms.contract.txt  pygsti.algorithms.do_exlgst.txt  pygsti.algorithms.do_iterative_exlgst.txt  pygsti.algorithms.do_iterative_mc2gst_with_model_selection.txt  (+266 more)
docs/: _config.yml  _toc.yml  api.rst  conftest.py  jupytext.toml  requirements.txt
hooks/: .get_branch  HOOKS.md  create_git_html  get_branch  hooksettings.py  post-commit  post-merge  post-recieve  pre-commit  pre-push  setup_hooks.sh  utilities.py
images/: custom_sprite_download.xcf
jupyter_notebooks/: AdvancedReport.ipynb  Basis Tutorial.ipynb  FAQ.ipynb  START_HERE.ipynb
pygsti/: __init__.py  _version.py  pgtypes.py
pylint/: .lint.conf  config.yml  findErrors.py  findWarnings.py  genDuplicateCode.sh  genMissingDocs.sh  genTODOS.sh  genUnused.sh  helpers.py  lintAll.py  lookFor.py  pylint.md  runAdjustables.py  score.py  yamlwrapper.py
scripts/: api_names.yaml  autoformat.sh  cleanup_api_names.py  clear_notebook_output.py  do-critical-linting.sh  do-linting.sh  find_missing_docstrings.py  importtestscript.py  matmul_converter.py  matplotlib_to_plotly_cmap.py  plantuml_parser.py  travis.yml.old  upgrade2v0.9.7.py  upgrade_stdmodule.py
stylesheets/: stylesheet.css
temp_notebooks/: gst_on_leaky_qubit.ipynb
temporary_demos/: .gitignore  MPI-dprobs.ipynb  function_profiler.py  jacobians_2q.py
test/: checkDocs.py  coverage_status.txt  duplicated.py  findDependencies.py  findSlowTests.py  genIndividualTestInfo.py  genInfo.py  gen_duplicated.sh  info.py  lint.py  mpinoseutils.py  new_gigs_test.py  pylint.md  pylint_config.yml  report_tests_info.txt  runAllTests.py  runAllTests.sh  runChanged.py  runCoverageTests.sh  runModule.py  runNoseTests.sh  runTests.py  runTests.sh  runTimedNoseTests.sh  setup.cfg.mpi  speedTest.py  test.md  testAlgorithms.py  testAnalysis.py  testCore.py  testDataSets.py  testDrivers.py  testGateSetConstruction.py  testGateSets.py  testGateSets2.py  testGateSets_oldVsNew.py  testGateStrings.py  testHessian.py  testJamiolkowski.py  testMPI.py  (+12 more)
tests/: AlgorithmsTest.py  AnalysisTest.py  BasisToolsTest.py  CoreTest.py  DataSetTests.py  DriversTest.py  GateSetConstructionTest.py  GateSetTests.py  GateSetTests2.py  GateStringTests.py  HessianTest.py  JamiolkowskiTests.py  MetricsTest.py  OptimizeTests.py  ReportTest.py  StdInputParserTest.py  ToolsTest.py  WriteAndLoadTest.py  runCoverageTests.sh  runNoseTests.sh  runTests.sh
tutorials/: 00 Quick and easy GST.html  00_Quick_and_easy_GST.html  01 GateSets.html  01_GateSets.html  02 Gatestring lists.html  02_Gatestring_lists.html  03 DataSets.html  03_DataSets.html  04 Algorithms.html  04_Algorithms.html  05 Analysis.html  05_Plotting.html  06 Advanced Algorithms.html  06_Advanced_Algorithms.html  07 Report Generation.html  07_Report_Generation.html  08 Fiducial Reduction.html  08_Fiducial_Reduction.html  09 Boostrapped Error Bars.html  09_Bootstrapped_Error_Bars.html  10_Fiducial_Selection__1_qubit_X_Y.html  11_Fiducial_Selection__2_qubits_IX_IY_XI_XY_Entangling.html  12_Germ_Selection.html  13_GST_on_2_qubits.html  14_GST_on_2_qubits__custom_2Q_gate.html  convertToHtml.sh
wip_notebook_sharing/: README.md  bunch-of-data-fix-embarassing-oversight.txt  case0-gst-with-outliers-beyond-tvd.ipynb  case0-gst-with-outliers.ipynb  experiment_helpers.py  objectives-handling-mixtures.ipynb
(+4993 files in other folders)
