
[build-system]
# see https://github.com/cvxgrp/cvxpy/issues/968 for numpy version
requires = ["setuptools>=61", "wheel", "setuptools_scm>=6.2", "cython", "numpy>=1.16.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygsti"
dynamic = ["version"]
description = 'A python implementation of Gate Set Tomography'
readme = "README.md"
authors = [
    {email = 'pygsti@sandia.gov'},
    {name = 'Erik Nielsen'},
    {name = 'Stefan Seritan'},
    {name = 'Corey Ostrove'},
    {name = 'Riley Murray'},
    {name = 'Jordan Hines'},
    {name = 'Kenneth Rudinger'},
    {name = 'Timothy Proctor'},
    {name = 'John Gamble'},
    {name = 'Robin Blume-Kohout'}
]
dependencies=[
    'numpy>=1.15.0',
    'scipy',
    'stim',
    'plotly>=3.8.0',
    'pandas',
    'networkx',
    'tqdm>=4.42.0'
]
requires-python='>=3.9'
keywords=[
    'pygsti',
    'tomography',
    'gate set',
    'pigsty',
    'pig',
    'quantum',
    'qubit'
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix"
]

[project.optional-dependencies]
diamond_norm = [
    'cvxpy>=1.4.0'
]
evolutionary_optimization = ['deap']
extensions = ['cython']
html_reports = ['jinja2', 'MarkupSafe']
ibmq = [
    'qiskit>1',
    'qiskit-ibm-runtime>=0.17.1',
    'dill'
]
interpygate = ['csaps']
linting = [
    'autopep8',
    'flake8'
]
# TensorFlow/Keras support for pygsti.extras.ml (the quantum-physics-aware neural networks,
# a.k.a. QPANNs, sub-package). Pinned to `tensorflow>=2.16` (which brings in Keras 3, via
# tensorflow's own `keras>=3.0.0` dependency) because pygsti.extras.ml's custom Keras layers
# were fixed to work against Keras 3's API (Keras 3 made `keras.layers.Dense.kernel` a
# read-only property, among other changes). If you instead want to match the original QPANN
# paper's environment (TensorFlow/Keras 2.12), install those older pins directly rather than
# using this extra -- note that requires Python <=3.11, since `tensorflow<2.16` has no wheels
# for Python 3.12+. This extra is deliberately NOT included in `testing`/`no_mpi`/`complete`
# below: TensorFlow is a heavy, platform-specific dependency, and pygsti.extras.ml's tests are
# not currently run in CI regardless of whether it's installed (see
# `.github/workflows/feature-branches.yml`'s `run-extra-tests: 'false'`).
ml = [
    'tensorflow>=2.16',
    'keras>=3.0'
]
memory_profiling = ['psutil']
mongodb = ['pymongo']
msgpack = ['msgpack']
multiprocessor = ['mpi4py']
notebooks = [
    'ipython',
    'notebook',
    'jupyter_server'
]
pytorch = ['torch']
report_pdf_figures = ['matplotlib']
reports = ['pygsti[html_reports,report_pdf_figures]']
testing_no_cython_mpi = [
    'pytest',
    'pytest-xdist',
    'pytest-cov',
    'nbval',
    'nbformat',
    'packaging',
    'zmq',
    'seaborn',
    'ply',
    'cirq-core',
    'pygsti[diamond_norm,ibmq,interpygate,memory_profiling,msgpack,notebooks,pytorch,reports]'
]
testing_no_cython = ['pygsti[multiprocessor,testing_no_cython_mpi]']
testing = ['pygsti[extensions,testing_no_cython]']
no_mpi = ['pygsti[evolutionary_optimization,extensions,linting,mongodb,testing_no_cython_mpi]']
complete = ['pygsti[multiprocessor,no_mpi]']

[project.urls]
Homepage = 'https://www.pygsti.info'
Repository = 'https://github.com/sandialabs/pyGSTi'
Download ='https://github.com/sandialabs/pyGSTi/tarball/master'

[tool.setuptools_scm]
version_file = "pygsti/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"