[metadata]
description-file = README.md
license-file = license.txt

[bdist_wheel]
universal = 1

[nosetests]
verbosity=2
with-timer=1
with-id=1
rednose=1

[flake8]
# flake8 will only check for these linting errors:
# E9**: Runtime errors
# F7**: Flake8 syntax errors
# F82*: Undefined names
# This list may be expanded in the future
select=E9,F7,F82
# Not actually checked but included for future use
max-line-length=120
